prometheus-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    prometheus: prometheus-mdt
  name: prometheus-mdt
spec:
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    app: prometheus
    prometheus: prometheus-mdt
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
